--- a/account_dashboard.html
+++ b/account_dashboard.html
@@ -16,15 +16,15 @@
             <div class="grid grid-cols-3 gap-4 mx-auto text-white">
                 <div class="bg-green-600 p-4 rounded-xl">
                     <h4 class="text-[24px]">Deposit</h4>
-                    <h3 class="text-[36px]">0.0$</h3>
+                    <h3 class="text-[36px]">$<span id="deposit_amnt">0.0</span></h3>
                 </div>
                 <div class="bg-orange-600 p-4 rounded-xl">
                     <h4 class="text-[24px]">Withdraw</h4>
-                    <h3 class="text-[36px]">0.0$</h3>
+                    <h3 class="text-[36px]">$<span id="withdraw_amnt">0.0</span></h3>
                 </div>
                 <div class="bg-sky-600 p-4 rounded-xl">
                     <h4 class="text-[24px]">Balance</h4>
-                    <h3 class="text-[36px]">0.0$</h3>
+                    <h3 class="text-[36px]">$<span id="balance_amnt">650</span></h3>
                 </div>
             </div>
             
@@ -33,17 +33,18 @@
             <div class="grid grid-cols-2 gap-4 mt-4 mx-auto text-white">
                 <div class="bg-green-700 p-4 rounded-xl">
                     <h4 class="text-[24px]">Please Deposit</h4>
-                    <input class="block mb-4 p-2 rounded-lg w-full" type="text" name="" id="deposit_amnt" placeholder="Enter deposit amount">
-                    <button class="btn hover:bg-sky-400" id="btn-login">Deposit</button>
+                    <input class="block mb-4 p-2 rounded-lg w-full text-green-700 font-semibold" type="number" name="" id="input_deposit" placeholder="Enter deposit amount" min="1">
+                    <button class="btn hover:bg-sky-400" id="btn-deposit">Deposit</button>
                 </div>
                 <div class="bg-orange-700 p-4 rounded-xl">
                     <h4 class="text-[24px]">Please Withdraw</h4>
-                    <input class="block mb-4 p-2 rounded-lg w-full" type="text" name="" id="deposit_amnt" placeholder="Enter withdraw amount">
-                    <button class="btn hover:bg-sky-400" id="btn-login">Withdraw</button>
+                    <input class="block mb-4 p-2 rounded-lg w-full text-orange-700 font-semibold" type="number" name="" id="input_withdraw" placeholder="Enter withdraw amount" min="1">
+                    <button class="btn hover:bg-sky-400" id="btn-withdraw">Withdraw</button>
                 </div>
                 
             </div>
         </section>
     </main>
+    <script src="scripts/calculation.js"></script>
 </body>
 </html>
