--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <footer>
 
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/login.js"></script>
 </body>
 </html>
