--- a/account_dashboard.html
+++ b/account_dashboard.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <section class="mt-6 md:pr-5 md:pl-5">
-            <div class="grid grid-cols-3 gap-4 mx-auto text-white">
+            <div class="grid p-2 md:grid-cols-3 gap-4 mx-auto text-white">
                 <div class="bg-green-600 p-4 rounded-xl">
                     <h4 class="text-[24px]">Deposit</h4>
                     <h3 class="text-[36px]">$<span id="deposit_amnt">0.0</span></h3>
@@ -30,7 +30,7 @@
             
         </section>
         <section class="mt-6 md:pr-5 md:pl-5">
-            <div class="grid grid-cols-2 gap-4 mt-4 mx-auto text-white">
+            <div class="grid p-2 md:grid-cols-2 gap-4 mt-4 mx-auto text-white">
                 <div class="bg-green-700 p-4 rounded-xl">
                     <h4 class="text-[24px]">Please Deposit</h4>
                     <input class="block mb-4 p-2 rounded-lg w-full text-green-700 font-semibold" type="number" name="" id="input_deposit" placeholder="Enter deposit amount" min="1">
